9.0.0: Upgrade Java 11 -> 17